# ct-finals

./: .env  .gitignore  circuit.netlist  main.py  plotter.ipynb  pyproject.toml  schemdraw-documentation.md  spice.py
gpt/: instructions.txt  schemdraw-documentation.md.txt  schemdraw-examples.md.txt
plot/: plotter.ipynb
sim/: circuit.netlist  spice.ipynb  spice.py
