[tool.poetry]
name = "ct-finals"
version = "0.1.0"
description = ""
authors = ["Chenghsuan Ho <chengxuanjhe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6"
PySpice = "^1.5"
python-dotenv = "^1.0"
schemdraw = {extras = ["matplotlib"], version = "^0.17"}
jupyter = "^1.0"
matplotlib = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.12"

[tool.black]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
